vbnc/vbnc/tests/Errors/30648.vb
Class C
    Shared Sub Main()
        dim s as string = "”"
    End Sub
End Class